# kobo-notion-sync

./: .gitignore  README.md  pyproject.toml
src/kobo_notion_sync/: __init__.py
src/kobo_notion_sync/cli/: __init__.py  main.py  setup.py  sync.py
src/kobo_notion_sync/models/: __init__.py  book.py  cache.py  config.py  highlight.py  sync_session.py
src/kobo_notion_sync/scheduler/: __init__.py
src/kobo_notion_sync/services/: cache_manager.py  cover_image.py  kobo_extractor.py  notion_client.py  sync_manager.py
