[tool.poetry]
name = "kobo-notion"
version = "1.0.0"
description = "Sync Kobo e-reader highlights and metadata to Notion"
authors = ["Stella Cheng <stella@example.com>"]
readme = "README.md"
packages = [{include = "kobo_notion_sync", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
notion-client = "^2.0.0"
click = ">=8.0,<9.0"
pydantic = "^2.0.0"
structlog = "^23.1.0"
keyring = "^24.0.0"
pync = "^2.0.3"
httpx = ">=0.24.0"
tomli = {version = "^2.0.1", python = "<3.11"}
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.285"
mypy = "^1.5.0"
responses = "^0.23.0"

[tool.poetry.scripts]
kobo-notion = "kobo_notion_sync.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = "notion_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pync.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "keyring.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src/kobo_notion_sync",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "contract: Contract tests for external interfaces",
    "integration: Integration tests with external services",
    "unit: Unit tests with mocked dependencies",
]
